fix: spacing for header/logo

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ header {
 
 .header-logo-icon {
     height: 40px;
+    margin-right: 5px;
 }
 
 .website-title {
